Improve not implemented response
